--- a/web/templates/hello/show.html.eex
+++ b/web/templates/hello/show.html.eex
@@ -1,3 +1,3 @@
-<div>
-	<h2>Hello World, from <%= @messenger %>!</h2>
+<div class="jumbotron">
+	<h2>Got Phoenix working, LOOOK <%= @messenger %>!</h2>
 </div>
